# log-analyzer-pro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/log-analyzer/: Cargo.toml
crates/log-analyzer/src/: file.txt  filecopy.txt  lib.rs  main.rs
crates/log-analyzer/src/domain/: apply_filters.rs  apply_format.rs  apply_search.rs  mod.rs
crates/log-analyzer/src/models/: filter.rs  format.rs  log.rs  log_line.rs  log_line_styled.rs  mod.rs  settings.rs
crates/log-analyzer/src/services/: log_service.rs  log_source.rs  mod.rs
crates/log-analyzer/src/stores/: analysis_store.rs  log_store.rs  mod.rs  processing_store.rs  regex_cache.rs
crates/log-source/: Cargo.toml
crates/log-source/src/source/: log_source.rs  mod.rs
crates/terminal-ui/: Cargo.toml  settings.json
crates/terminal-ui/src/: app.rs  lib.rs  main.rs  styles.rs
crates/terminal-ui/src/data/: lazy_stateful_table.rs  mod.rs  stateful_list.rs  stateful_table.rs
crates/terminal-ui/src/ui/: mod.rs  ui_error_message.rs  ui_filter_popup.rs  ui_loading_popup.rs  ui_log_analyzer.rs  ui_log_options_popup.rs  ui_navigation_popup.rs  ui_popup.rs  ui_shared.rs  ui_source_popup.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/domain/: apply_filters.rs
rust/src/models/: format.rs  log_line.rs  mod.rs
rust/src/services/: log_service.rs  log_source.rs
rust/src/stores/: log_store.rs
src/: file.txt  main.rs
src/domain/: apply_format.rs  apply_search.rs
src/services/: log_service.rs  log_source.rs  mod.rs
src/stores/: analysis_store.rs  processing_store.rs
