[package]
name = "lap"
version = "1.0.0"  #:version
authors = ["Mario Casals <mario.casals.hernandez@gmail.com>"]
description = """
Log Analyzer Pro is a command line application giving powerful filtering and searching
capabilities to analyze software logs.

Logs can come from log files (updates live if these are modified)
or a socket connection.
"""
documentation = "https://github.com/MrCasCode/log-analyzer-pro"
homepage = "https://github.com/MrCasCode/log-analyzer-pro"
repository = "https://github.com/MrCasCode/log-analyzer-pro"
keywords = ["log", "filter", "analysis", "regex", "search", "pattern"]
categories = ["log-analysis", "command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
readme = "README.md"
autotests = false
edition = "2021"

[[bin]]
bench = false
path = "crates/terminal-ui/src/main.rs"
name = "lap"


[workspace]
members = [
  "crates/terminal-ui",
  "crates/log-analyzer",
  "crates/log-source"
]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
async-std = { version = "1.10.0", features = ["unstable"]}
crossterm = "0.23"
tui = "0.17.0"
unicode-width = "0.1.9"
log-analyzer = { path = 'crates/log-analyzer'}
tui-input = "0.3.0"
flume = "0.10.12"
tokio = {version = "1.18.2", features = ["sync"]}
serde_json = "1.0.78"

[profile.release]
debug = true