[package]
name = "log-analyzer-pro"
version = "1.0.0"  #:version
authors = ["Mario Casals <mario.casals.hernandez@gmail.com>"]
description = """
Log Analyzer Pro is a command line application giving powerful filtering and searching
capabilities to analyze software logs.

Logs can come from log files (updates live if these are modified)
or a socket connection.
"""
documentation = "https://github.com/MrCasCode/log-analyzer-pro"
homepage = "https://github.com/MrCasCode/log-analyzer-pro"
repository = "https://github.com/MrCasCode/log-analyzer-pro"
keywords = ["log", "filter", "analysis", "regex", "search"]
categories = ["development-tools::debugging", "command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
readme = "README.md"
autotests = false
edition = "2021"

[[bin]]
bench = false
path = "src/main.rs"
name = "lap"


[workspace]
members = [
  "crates/terminal-ui",
  "crates/log-analyzer",
  "crates/log-source"
]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"]}
clap = { version = "3.1.18", features = ["derive"] }
terminal-ui = {version = "0.1.0", path= "crates/terminal-ui"}

[profile.release]
debug = true