[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
regex = "1.5.4"
async-std = { version = "1.10.0", features = ["unstable"]}
async-trait = "0.1.52"
futures = "0.3.19"
chrono = "0.4.19"
rayon = "1.5.3"
serde = {version = "1.0.135", features = ["derive"]}
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["sync"]}
