[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
regex = "1.5.4"
async-std = { version = "1.10.0", features = ["unstable"]}
async-trait = "0.1.52"
futures = "0.3.19"
chrono = "0.4.19"
rayon = "1.5.3"
pariter = "0.5.1"
num_cpus = "1.13.1"
serde = {version = "1.0.135", features = ["derive"]}
serde_json = "1.0.78"
rustc-hash = { version = "1.1"}
parking_lot = "0.12.0"
flume = "0.10.12"
tokio = {version = "1.18.2", features = ["sync"]}
log-source = { path = '../log-source'}