[package]
name = "log-source"
version = "0.1.1"
authors = ["Mario Casals <mario.casals.hernandez@gmail.com>"]
description = """
Log source is a crate used to read files and sockets
"""
documentation = "https://github.com/MrCasCode/log-analyzer-pro"
homepage = "https://github.com/MrCasCode/log-analyzer-pro"
repository = "https://github.com/MrCasCode/log-analyzer-pro"
keywords = ["log", "filter", "analysis", "regex", "search"]
categories = ["development-tools::debugging", "command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
autotests = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
async-std = { version = "1.10.0", features = ["unstable"]}
async-trait = "0.1.52"
parking_lot = "0.12.0"
flume = "0.10.12"