[package]
name = "terminal-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
async-std = { version = "1.10.0", features = ["unstable"]}
crossterm = "0.22.1"
tui = "0.17.0"
unicode-width = "0.1.9"
log-analyzer = { path = '../log-analyzer'}

