[package]
name = "terminal-ui"
version = "0.1.3"
authors = ["Mario Casals <mario.casals.hernandez@gmail.com>"]
description = """
Terminal ui is a crate used to visualize logs
"""
documentation = "https://github.com/MrCasCode/log-analyzer-pro"
homepage = "https://github.com/MrCasCode/log-analyzer-pro"
repository = "https://github.com/MrCasCode/log-analyzer-pro"
keywords = ["log", "filter", "analysis", "regex", "search"]
categories = ["development-tools::debugging", "command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
autotests = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
async-std = { version = "1.10.0", features = ["unstable"]}
crossterm = "0.23"
tui = "0.17.0"
unicode-width = "0.1.9"
log-analyzer = {version = "0.1.3", path = "../log-analyzer"}
tui-input = "0.3.0"
flume = "0.10.12"
tokio = {version = "1.18.2", features = ["sync"]}